# llm-agents-orchestrator

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  cli.py  docker-compose.yml  main.py  pyproject.toml
src/agent_framework/agents/: __init__.py  base.py  default.py  state.py
src/agent_framework/llm/: __init__.py  config.py  llm.py  request_queue.py  types.py  utils.py
src/agent_framework/prompts/: __init__.py
src/agent_framework/prompts/DefaultAgent/: system_prompt.jinja
src/agent_framework/prompts/coordination/: root_agent.jinja  sub_agent.jinja
src/agent_framework/runtime/: runtime.py  telemetry.py  tool_server.py
src/agent_framework/services/: __init__.py  agent_service.py  agent_spawner.py  sandbox_client.py
src/agent_framework/state/: __init__.py  redis_manager.py  usage.py
src/agent_framework/tools/: README.md  __init__.py  argument_parser.py  executor.py  loader.py  registry.py
src/agent_framework/tools/agent_management/: __init__.py  actions.py  tool_def.xml
src/agent_framework/utils/: audit.py  id_utils.py  logging_config.py
tests/: __init__.py  conftest.py  reproduce_issue.py  test_agent_lifecycle.py  test_executor.py  test_executor_bug.py  test_llm_core.py  test_model_selection.py  test_prompt_override.py  test_reasoning_tool_extraction.py  test_sandbox_client.py  test_sandbox_fallback.py  test_sandbox_mode_flag.py  test_shell_session.py  test_state_management.py  test_terminal_edge_cases.py  test_terminal_integration.py  test_tool_exclusion.py  test_waiting_resumption.py
(+5 files in other folders)
